Google Data APIs Objective-C Client Library
Framework Release Notes

Project site:     http://code.google.com/p/gdata-objectivec-client/
Discussion group: http://groups.google.com/group/gdata-objectivec-client-framework

Changed since 1.12.0

Additions

- Added service method fetchEntryByUpdatingEntry:forEntryURL:completionHandler:

- Added MD5Checksum, GDataDocFilename, GDataDocSuggestedFilename,
  GDataDocLastCommented, GDataSharedWithMe, GDataLastModifiedByMe to document entries

- Added GDataCategoryLabelShared as a label for document entries.

- Added alternateSelfLink method in GDataEntryDocBase.

- Added Docs Changes feed

- Added GDataACLAdditionalRole

- Added 3d query parameter for YouTube

- Added fetcher shouldFetchInBackground property to service objects

- Added code to the YouTube sample showing how to restart a stopped upload

Changes

- Replaced GDataHTTPFetcher with GTMHTTPFetcher, GDataGatherInputStream with
  GTMGatherInputStream, and GDataMIMEDocument with GTMMIMEDocument

- Replaced GDataOAuth with GTMOAuth2

- Feed objects now support NSFastEnumeration of entries

- YouTube uploads now return a GDataEntryYouTubeVideo object

- The YouTube upload URL is now https

- GDataEntryYouTubeFeedLinkBase now has a mediaGroup wrapping the mediaThumbnail

- Renamed GDataYouTubePublicationState's "state" method to "name" to avoid a
  compiler warning under Xcode 4

- Removed Translator Toolkit and Google Health support

- Remove upload callbacks on systems without NSURLConnection's didSendBodyData:
  support (only affects users running early releases of Mac OS X 10.5)

- Replaced +userAgentStringForString with utility functions from GTMHTTPFetcher

Bugs Fixed

- Fixed retain of libxml document needed for safely persisting object
  unknownChildren.

- Fixed waitForTicket's return value on delete fetches (thanks superbil)


Release 1.12.0
8-April-2011
Changes since 1.11.0

Additions

- Added static cookie storage accessor to http fetcher
